--- a/gallery.html
+++ b/gallery.html
@@ -147,6 +147,47 @@
 
   <!-- Gallery -->
   <div class="gallery">
+    <div class="gallery">
+  <!-- Monster cards -->
+  <img 
+    src="https://assets.masterduelmeta.com/images/cards/17803824.webp" 
+    alt="Gimmick Puppet Little Soldiers" 
+    data-category="monster"
+    data-name="Gimmick Puppet Little Soldiers" 
+    data-type="Machine / Effect Monster" 
+    data-attribute="DARK" 
+    data-level="3" 
+    data-atk="900" 
+    data-def="600" 
+    data-effect="If this card is sent from the Deck to the GY by a 'Gimmick Puppet' monster’s effect: You can add this card from your GY to your hand." 
+  />
+  <img 
+    src="https://assets.masterduelmeta.com/images/cards/62071005.webp" 
+    alt="Gimmick Puppet Fiendish Knight" 
+    data-category="monster"
+    data-name="Gimmick Puppet Fiendish Knight" 
+    data-type="Machine / Effect Monster" 
+    data-attribute="DARK" 
+    data-level="4" 
+    data-atk="1800" 
+    data-def="0" 
+    data-effect="Once per turn, if your opponent controls a monster: You can send 1 'Gimmick Puppet' monster from your hand to the GY; Special Summon this card from your hand." 
+  />
+  <img 
+    src="https://assets.masterduelmeta.com/images/cards/96782176.webp" 
+    alt="Gimmick Puppet Terror Baby" 
+    data-category="monster"
+    data-name="Gimmick Puppet Terror Baby" 
+    data-type="Machine / Effect Monster" 
+    data-attribute="DARK" 
+    data-level="4" 
+    data-atk="1700" 
+    data-def="1200" 
+    data-effect="If this card is sent from the Deck to the GY by a 'Gimmick Puppet' monster’s effect: You can add this card from your GY to your hand." 
+  />
+
+  <!-- Add spell/trap/extra cards here with their respective data-category attributes -->
+    </div>
     <img 
       src="https://s3.duellinksmeta.com/cards/65f3212e4e67b487ab0885b3_w420.webp" 
       alt="Gimmick Puppet Rouge Doll" 
