--- a/gallery.html
+++ b/gallery.html
@@ -149,7 +149,7 @@
   <div class="gallery">
   <!-- Monster cards -->
   <img 
-    src="https://assets.masterduelmeta.com/images/cards/17803824.webp" 
+    src="https://s3.duellinksmeta.com/cards/65f321124e67b487ab0883a7_w420.webp" 
     alt="Gimmick Puppet Little Soldiers" 
     data-category="monster"
     data-name="Gimmick Puppet Little Soldiers" 
@@ -161,7 +161,7 @@
     data-effect="If this card is sent from the Deck to the GY by a 'Gimmick Puppet' monster’s effect: You can add this card from your GY to your hand." 
   />
   <img 
-    src="https://assets.masterduelmeta.com/images/cards/62071005.webp" 
+    src="https://s3.duellinksmeta.com/cards/66443371d645925fa6f5c530_w420.webp" 
     alt="Gimmick Puppet Fiendish Knight" 
     data-category="monster"
     data-name="Gimmick Puppet Fiendish Knight" 
@@ -173,7 +173,7 @@
     data-effect="Once per turn, if your opponent controls a monster: You can send 1 'Gimmick Puppet' monster from your hand to the GY; Special Summon this card from your hand." 
   />
   <img 
-    src="https://assets.masterduelmeta.com/images/cards/96782176.webp" 
+    src="https://s3.duellinksmeta.com/cards/60c2b3aba0e24f2d54a523d9_w420.webp" 
     alt="Gimmick Puppet Terror Baby" 
     data-category="monster"
     data-name="Gimmick Puppet Terror Baby" 
