--- a/gallery.html
+++ b/gallery.html
@@ -155,10 +155,10 @@
     data-name="Gimmick Puppet Little Soldiers" 
     data-type="Machine / Effect Monster" 
     data-attribute="DARK" 
-    data-level="3" 
-    data-atk="900" 
-    data-def="600" 
-    data-effect="If this card is sent from the Deck to the GY by a 'Gimmick Puppet' monster’s effect: You can add this card from your GY to your hand." 
+    data-level="4" 
+    data-atk="0" 
+    data-def="0" 
+    data-effect="If this card is Normal or Special Summoned: You can send 1 "Gimmick Puppet" monster with a different Level than this card from your Deck to the GY; this card's Level becomes that monster's. You can only use this effect of "Gimmick Puppet Little Soldiers" once per turn. You can banish this card from your GY, then target up to 2 "Gimmick Puppet" monsters you control; increase their Levels by 4 until the end of this turn." 
   />
   <img 
     src="https://s3.duellinksmeta.com/cards/66443371d645925fa6f5c530_w420.webp" 
