--- a/gallery.html
+++ b/gallery.html
@@ -158,7 +158,7 @@
     data-level="4" 
     data-atk="0" 
     data-def="0" 
-    data-effect="If this card is Normal or Special Summoned: You can send 1 "Gimmick Puppet" monster with a different Level than this card from your Deck to the GY; this card's Level becomes that monster's. You can only use this effect of "Gimmick Puppet Little Soldiers" once per turn. You can banish this card from your GY, then target up to 2 "Gimmick Puppet" monsters you control; increase their Levels by 4 until the end of this turn." 
+    data-effect="If this card is Normal or Special Summoned: You can send 1 &quot;Gimmick Puppet&quot; monster with a different Level than this card from your Deck to the GY; this card's Level becomes that monster's. You can only use this effect of &quot;Gimmick Puppet Little Soldiers&quot; once per turn. You can banish this card from your GY, then target up to 2 &quot;Gimmick Puppet&quot; monsters you control; increase their Levels by 4 until the end of this turn." 
   />
   <img 
     src="https://s3.duellinksmeta.com/cards/66443371d645925fa6f5c530_w420.webp" 
