--- a/gallery.html
+++ b/gallery.html
@@ -282,28 +282,31 @@
   const modalClose = document.getElementById('modalClose');
 
   document.querySelectorAll('.gallery img').forEach(img => {
-    img.addEventListener('click', () => {
-      modal.style.display = 'block';
-      modalName.textContent = img.dataset.name;
-      modalImg.src = img.src;
-      modalImg.alt = img.alt;
+  document.querySelectorAll('.gallery img').forEach(img => {
+  img.addEventListener('click', () => {
+    modal.style.display = 'block';
+    modalName.textContent = img.dataset.name;
+    modalImg.src = img.src;
+    modalImg.alt = img.alt;
 
-      let effectText = img.dataset.effect;
-      let splitEffects = effectText.split('||'); // Split effects by '||'
-      let formattedEffects = splitEffects
-        .map((effect, index) => `<strong>Effect ${index + 1}:</strong> ${effect.trim()}`)
-        .join('<br/><br/>');
+    let effectText = img.dataset.effect;
+    let splitEffects = effectText.split('||'); // Split effects by '||'
+    let formattedEffects = splitEffects
+      .map((effect, index) => `<strong>Effect ${index + 1}:</strong> ${effect.trim()}`)
+      .join('<br/><br/>');
 
-      let details = `
-        <strong>Type:</strong> ${img.dataset.type}<br/>
-        <strong>Attribute:</strong> ${img.dataset.attribute}<br/>
-        ${img.dataset.level ? `<strong>Level:</strong> ${img.dataset.level}<br/>` : ''}
-        ${img.dataset.rank ? `<strong>Rank:</strong> ${img.dataset.rank}<br/>` : ''}
-        <strong>ATK:</strong> ${img.dataset.atk} | <strong>DEF:</strong> ${img.dataset.def}<br/><br/>
-        ${formattedEffects}
-      `;
-    });
+    let details = `
+      <strong>Type:</strong> ${img.dataset.type}<br/>
+      <strong>Attribute:</strong> ${img.dataset.attribute}<br/>
+      ${img.dataset.level ? `<strong>Level:</strong> ${img.dataset.level}<br/>` : ''}
+      ${img.dataset.rank ? `<strong>Rank:</strong> ${img.dataset.rank}<br/>` : ''}
+      <strong>ATK:</strong> ${img.dataset.atk} | <strong>DEF:</strong> ${img.dataset.def}<br/><br/>
+      ${formattedEffects}
+    `;
+
+    modalDetails.innerHTML = details;  // 🔥 This is the fix!
   });
+});
 
   modalClose.onclick = () => modal.style.display = 'none';
   window.onclick = event => {
