--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Gimmick Puppet Card Gallery</title>
+<title>Card Gallery</title>
 
 <style>
   body {
